packages/css/src/formElements/textarea/textarea.css
.md-textarea__outer-wrapper {
  font-family: var(--md-typography-family-body);
  font-size: var(--md-typography-size-16);
}

.md-textarea {
  padding: var(--md-spacing-16) var(--md-spacing-32) var(--md-spacing-16) var(--md-spacing-16);
  font-family: var(--md-typography-family-body);
  max-width: 100%;
  width: 100%;
  background-color: var(--md-color-surface-primary);
  border-radius: var(--md-radius-sm);
  border: var(--md-size-1) solid var(--md-color-border-primary);
  margin: var(--md-size-1);
  color: var(--md-color-text-primary);
  font-size: var(--md-typography-size-16);
  box-sizing: border-box;
}

.md-textarea:not(.md-textarea.md-textarea--readonly):not(.md-textarea.md-textarea--disabled):active,
.md-textarea:not(.md-textarea.md-textarea--readonly):not(.md-textarea.md-textarea--disabled):focus-visible {
  outline: 2px solid var(--md-color-cta-primary-default);
  outline-offset: -2px;
  border-color: transparent;
}

.md-textarea.md-textarea--disabled:focus-visible,
.md-textarea.md-textarea--readonly:focus-visible {
  outline: 0;
  cursor: default;
}

.md-textarea.md-textarea--disabled {
  background-color: var(--md-color-disabled-bg);
}

.md-textarea.md-textarea--readonly:not(.md-textarea.md-textarea--disabled) {
  border: 0;
  background-color: transparent;
}

.md-textarea.md-textarea--error {
  border-color: var(--md-color-attention-error-primary);
}

.md-textarea__label-wrapper {
  padding-right: var(--md-size-8);
}

.md-textarea__label {
  display: flex;
  align-items: flex-end;
  font-weight: var(--md-typography-font-weight-medium);
}

.md-textarea__label > * + * {
  margin-left: var(--md-size-16);
}

.md-textarea__help-button {
  display: flex;
  flex-grow: 1;
}

.md-textarea__error {
  color: var(--md-color-attention-error-primary);
  font-size: 0.88rem;
  margin-top: var(--md-size-8);
}

.md-textarea__help-text {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.15s ease-out;
}

.md-textarea__help-text--open {
  padding-top: var(--md-size-8);
  max-height: 2000px;
  transition: max-height 0.5s ease-in;
}

.md-textarea::placeholder {
  color: var(--md-color-text-disabled);
  font-family: var(--md-typography-family-body);
}

